# ARISE_simulation

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: my_controllers.yaml
hexabot/: CMakeLists.txt  package.xml
hexabot/config/: robot_model.rviz
hexabot/launch/: gazebo_control_rsp.launch.py  gazebo_no_control_rsp.launch.py  initialize_legs.launch.py  robot_state_publisher.launch.py  single_leg_control.launch.py  tripod_gait.launch.py
hexabot/meshes/: body.stl  femur.part  tibia.stl
hexabot/models/robot/: model.config  ros_robot.sdf
hexabot/models/robot/meshes/: coxa.part  femur.stl  tibia.part
hexabot/scripts/: multi_leg_control.py  single_leg_control.py  tripod_gait_control.py
hexabot/urdf/: robot_gazebo.xacro  ros2_control.xacro  ros_robot.urdf.xacro  ros_robot_core.xacro
launch/: gazebo_control_rsp.launch.py  gazebo_no_control_rsp.launch.py  initialize_legs.launch.py  robot_state_publisher.launch.py  single_leg_control.launch.py  tripod_gait.launch.py
models/robot/meshes/: body.part  coxa.stl
scripts/: multi_leg_control.py  single_leg_control.py  single_leg_control_v0.py  tripod_gait_control.py
urdf/: robot_gazebo.xacro  ros2_control.xacro  ros_robot.urdf.xacro  ros_robot_core.xacro  ros_robot_v0.urdf.xacro  ros_robot_v1.urdf.xacro  ros_robot_v2.urdf.xacro  ros_robot_v3.urdf.xacro
worlds/: basic_world.world
