<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexabot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="madyhr@todo.todo">madyhr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>gazebo_ros</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <exec_depend>robot_state_publisher</exec_depend> -->
  <!-- <exec_depend>gazebo_ros</exec_depend> -->
  
  <!-- <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path = "{$prefix}/models"/> -->
  </export>
</package>